cabal-version: 3.0
name:          gateway
version:       0.1.0.0
build-type:    Simple

common shared-deps
  default-language:   Haskell2010
  ghc-options:        -Wall -Wunused-imports -Werror
  default-extensions:
    DeriveGeneric
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

library
  import:          shared-deps
  hs-source-dirs:  src
  exposed-modules:
    API.Routes
    API.Types
    App.Env
    Authorizer.Mock
    DB.Connection
    DB.TransactionRepo
    DB.UserRepo
    Domain.Transaction
    Domain.User
    Server
    Vault.Repo
    Vault.Tokenizer
  build-depends:
    , aeson                 ^>=2.2
    , base                  ^>=4.18
    , bytestring            ^>=0.11
    , http-client           ^>=0.7
    , http-types            ^>=0.12
    , mtl                   ^>=2.3
    , postgresql-simple     ^>=0.7
    , resource-pool         ^>=0.4
    , scientific            ^>=0.3
    , servant               ^>=0.20
    , servant-server        ^>=0.20
    , text                  ^>=2.0
    , time                  ^>=1.12
    , uuid                  ^>=1.3
    , random                ^>=1.2
    , wai                   ^>=3.2
    , warp                  ^>=3.3

executable gateway
  import:          shared-deps
  hs-source-dirs:  app
  main-is:         Main.hs
  build-depends:
    , base
    , gateway